--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,12 +41,15 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\TTScripts\PlayerController.cs" />
      <Compile Include="Assets\AssetStore\AlignedGames\Polygonal Foliage Asset Package\Scripts\Utility\FlyCameraBehaviour.cs" />
-     <Compile Include="Assets\Scripts\SwapTools.cs" />
-     <Compile Include="Assets\Scripts\Spawner.cs" />
-     <Compile Include="Assets\Scripts\CloudController.cs" />
-     <Compile Include="Assets\Scripts\FreeCamera.cs" />
+     <Compile Include="Assets\Scripts\TTScripts\SwapTools.cs" />
+     <Compile Include="Assets\Scripts\TTScripts\Spawner.cs" />
+     <Compile Include="Assets\Scripts\TTScripts\CloudController.cs" />
+     <Compile Include="Assets\Scripts\TTScripts\FreeCamera.cs" />
+     <Compile Include="Assets\Scripts\CleanerScripts\GameController.cs" />
+     <Compile Include="Assets\Scripts\CleanerScripts\LevelController.cs" />
+     <Compile Include="Assets\Scripts\CleanerScripts\PlayerController.cs" />
      <None Include="Assets\AssetStore\AlignedGames\Polygonal Foliage Asset Package\Shaders\Cloud.shader" />
      <None Include="Assets\AssetStore\AlignedGames\Polygonal Foliage Asset Package\Shaders\Diffuse.shader" />
      <Reference Include="UnityEngine">
